# torchcast

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  rtd.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: main.yml  test.yml
demo/: Dockerfile  app.py
demo/assets/: app.css
docs/: README.md  air_quality.py  conf.py  electricity.py  index.rst  macros.hrst  quick_start.py
docs/_static/css/: custom.css
docs/api/: api.rst  covariance.rst  exp_smooth.rst  kalman_filter.rst  poisson_filter.rst  processes.rst  state_space.rst  utils.rst
docs/examples/: air_quality.ipynb  air_quality.py  aq_daily.csv  aq_weekly.csv  electricity.ipynb  electricity.py  examples.rst  kf_nn.pt  kf_standard.pt  per_group_nn.pt  sales.py
docs/examples/electricity/: calendar_feature_nn25.pt  es_MT_358.pt  es_MT_358_2.pt  es_nn25.pt
tests/: test_covariance.py  test_data_utils.py  test_kalman_filter.py  test_process.py  test_training.py  test_utils.py
torchcast/: covariance.py  exp_smooth.py  kalman_filter.py
torchcast/covariance/: __init__.py  base.py  block.py  sum.py  util.py
torchcast/exp_smooth/: __init__.py  exp_smooth.py  innovation_matrix.py  smoothing_matrix.py
torchcast/internals/: utils.py
torchcast/kalman_filter/: __init__.py  base.py  bernoulli_filter.py  binomial_filter.py  ekf.py  gaussian.py  kalman_filter.py  poisson_filter.py  predictions.py  simulations.py
torchcast/process/: __init__.py  base.py  local.py  regression.py  season.py  utils.py
torchcast/state_space/: __init__.py  base.py  predictions.py  simulations.py  ss_step.py
torchcast/tobit_filter/: ss_step.py  tobit_filter.py
torchcast/utils/: __init__.py  baseline.py  data.py  datasets.py  features.py  misc.py  outliers.py  rtd.py  simulate.py  stats.py  training.py
