[metadata]
name = torchcast
author = Jacob Dink
author_email = jacob.dink@strong.io
description = Forecasting in PyTorch
long_description = file: README.rst
url = https://github.com/strongio/torchcast
project_urls =
    Bug Tracker = https://github.com/strongio/torchcast/issues
    Documentation = https://torchcast.readthedocs.io/en/latest/